--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -436,7 +436,7 @@
   },
   "voiceRecorder": {
     "instructionsTitle": "Instrucciones de grabación",
-    "instructionsText": "Describe la propiedad con todos los detalles: ubicación, habitaciones, características especiales, amenidades, estado de la propiedad, precio y cualquier información relevante. Habla claro y con detalle para que la IA genere la mejor descripción posible.",
+    "instructionsText": "Describe la propiedad con todos los detalles: ubicación, campos personalizados y cualquier información relevante. Habla claro y con detalle para que la IA genere la mejor descripción posible.",
     "microphoneError": "No se pudo acceder al micrófono. Verifica los permisos.",
     "tapToRecord": "Toca para grabar",
     "pause": "Pausar",
