feat(i18n): Add editProperty translations for Spanish and English
- Add complete translation set for edit property page
- Include labels for photos, details, location, custom fields
- Add property type, listing type, and status translations
- Support bilingual form labels and validation messages
- Ensure consistency with existing translation structure

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,56 @@
     "confirm": "Confirm",
     "success": "Success",
     "error": "Error",
-    "close": "Close"
+    "close": "Close",
+    "editProperty": {
+      "title": "Edit Property",
+      "loading": "Loading property...",
+      "photos": "Photos",
+      "addPhotos": "Add",
+      "compressing": "Compressing...",
+      "currentPhotos": "Current photos:",
+      "newPhotos": "New photos:",
+      "minPhotosRequired": "Minimum 2 photos required",
+      "propertyLanguage": "Property language",
+      "propertyTitle": "Title",
+      "description": "Description",
+      "details": "Details",
+      "price": "Price",
+      "propertyType": "Type",
+      "listingType": "Listing Type",
+      "currency": "Currency",
+      "currencyTip": "You can change your default currency in Settings",
+      "location": "Location",
+      "address": "Address",
+      "city": "City",
+      "state": "State",
+      "zipCode": "Zip Code",
+      "showOnMap": "Show location on map",
+      "propertyCountry": "Property country",
+      "selectCountry": "Select the country before pasting the Plus Code",
+      "customFields": "Custom Fields",
+      "manageFields": "Manage fields",
+      "loadingFields": "Loading fields...",
+      "noCustomFields": "No custom fields for this combination",
+      "createFields": "Create fields",
+      "propertyStatus": "Property status",
+      "cancel": "Cancel",
+      "save": "Save",
+      "saving": "Saving...",
+      "locationRequired": "You must configure the location on the map",
+      "plusCodeRequired": "Plus Code was not generated correctly",
+      "house": "House",
+      "condo": "Condo",
+      "apartment": "Apartment",
+      "land": "Land",
+      "commercial": "Commercial",
+      "sale": "Sale",
+      "rent": "Rent",
+      "active": "Active",
+      "pending": "Pending",
+      "sold": "Sold",
+      "rented": "Rented"
+    }
   },
   "settings": {
     "title": "Settings",
