--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -9,7 +9,56 @@
     "confirm": "Confirmar",
     "success": "Éxito",
     "error": "Error",
-    "close": "Cerrar"
+    "close": "Cerrar",
+    "editProperty": {
+      "title": "Editar Propiedad",
+      "loading": "Cargando propiedad...",
+      "photos": "Fotos",
+      "addPhotos": "Agregar",
+      "compressing": "Comprimiendo...",
+      "currentPhotos": "Fotos actuales:",
+      "newPhotos": "Fotos nuevas:",
+      "minPhotosRequired": "Mínimo 2 fotos requeridas",
+      "propertyLanguage": "Idioma de la propiedad",
+      "propertyTitle": "Título",
+      "description": "Descripción",
+      "details": "Detalles",
+      "price": "Precio",
+      "propertyType": "Tipo",
+      "listingType": "Tipo de Listing",
+      "currency": "Divisa",
+      "currencyTip": "Puedes cambiar tu divisa por defecto en Configuración",
+      "location": "Ubicación",
+      "address": "Dirección",
+      "city": "Ciudad",
+      "state": "Estado",
+      "zipCode": "Código Postal",
+      "showOnMap": "Mostrar ubicación en mapa",
+      "propertyCountry": "País de la propiedad",
+      "selectCountry": "Selecciona el país antes de pegar el Plus Code",
+      "customFields": "Campos Personalizados",
+      "manageFields": "Gestionar campos",
+      "loadingFields": "Cargando campos...",
+      "noCustomFields": "No hay campos personalizados para esta combinación",
+      "createFields": "Crear campos",
+      "propertyStatus": "Estado de la propiedad",
+      "cancel": "Cancelar",
+      "save": "Guardar",
+      "saving": "Guardando...",
+      "locationRequired": "Debes configurar la ubicación en el mapa",
+      "plusCodeRequired": "El Plus Code no se generó correctamente",
+      "house": "Casa",
+      "condo": "Condominio",
+      "apartment": "Apartamento",
+      "land": "Terreno",
+      "commercial": "Comercial",
+      "sale": "Venta",
+      "rent": "Alquiler",
+      "active": "Activa",
+      "pending": "Pendiente",
+      "sold": "Vendida",
+      "rented": "Alquilada"
+    }
   },
   "settings": {
     "title": "Ajustes",
