feat: Add temporary upload token system for delegated property creation
- Add upload_tokens table support in database types
- Create API endpoints for token generation, validation, listing, and revocation
- Add settings page for agents to generate and manage upload tokens
- Implement token-based authentication for external property uploads
- Create dedicated upload flow at /upload/[token]/create for delegated access
- Add token validation page with access control
- Update translations (EN/ES) for upload token feature
- Enable agents to generate secure temporary links for assisted property uploads

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,6 +91,10 @@
         "publishSuccess": "Published successfully!",
         "publishSuccessDesc": "Your property is now on Facebook"
       },
+      "uploadToken": {
+        "title": "Upload Link",
+        "description": "Generate temporary link for help"
+      },
       "portfolio": {
         "title": "My Portfolio",
         "description": "View your public portfolio",
